# nanoqwen

./: GOTCHAS.md  pyproject.toml
.claude/agents/: test-simplifier.md
.claude/skills/moe-coach/: SKILL.md
nanomoe/: __init__.py  config.py
nanomoe/layers/: __init__.py  attention.py  block.py  moe.py
nanoqwen/layers/: moe.py
tests/: config_utils.py  conftest.py  test_attention.py  test_decoder.py  test_moe_block.py  test_rope.py  utils.py
